--- a/蜜糖商店.md
+++ b/蜜糖商店.md
@@ -4,6 +4,8 @@
 
 为了能够给予消费者们更加优质的服务内容，还可以为大家推出全品类正品资源账号合租服务，这其中包含了种类丰富的各种流媒体视频，比如Disney Plus、HBOMAX、HBOGO、Amazon Prime、Line TV、Apple One、KKTV、Apple TV+、动画疯、Hulu等，可以为大家提供Apple Music、Tidal无损音乐、Amazon Music 等正版音乐平台，并为大家提供一些比较高端的会员账号服务内容。如果大家有其他方面的珍惜资源全可以通过平台进行分享，这样能够帮助更多的人进行高效的优质服务。
 
+## [直达奈飞账号购买合租平台](https://metshop.cn?referrerUserNo=MTUNMDJM3YUF)  
+
 ## [进入蜜糖商店去看看](https://metshop.vip/#/?sid=MTU70531)
 
 ## 2.蜜糖商店都有哪些优势和特色呢？
