--- a/奈飞小铺.md
+++ b/奈飞小铺.md
@@ -1,5 +1,5 @@
 对于我们生活当中那些热爱追剧的朋友们来说，大家对于奈飞小铺应该并不陌生，这是一个全球最为优质的流媒体播放合租平台，能够为大家提供全球的精彩电影和影视作品，从而满足大家的观影需求。不仅能够为大家提供很多火爆的美剧，比如《怪奇物语》、《纸牌屋》等，同时还能够为大家提供一些奈飞平台的自制剧，只为了能够给大家提供更加优质的服务。虽然能够给大家提供非常优质的观影体验和服务，但是所需要支付的价格也很昂贵，很多人都会非常的心疼，如果大家对于奈飞小铺套餐价格非常感兴趣的话，接下来就给大家简单的介绍一下。
-## 直达奈飞小铺购买合租平台(https://ihezu.fans/cWTk6p) 优惠码:coupon35
+## [直达奈飞小铺购买合租平台](https://ihezu.fans/cWTk6p) 优惠码:coupon35
 
 - Basic：每个月的价格为21大元，可以享受到30天的优质服务，提供480p的清晰度视频。
     
